nginx-helloworld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-helloworld
  template:
    metadata:
      labels:
        app: nginx-helloworld
    spec:
      containers:
        - name: nginx-helloworld
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-helloworld
  labels:
    app: nginx-helloworld
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx-helloworld
